# ffmpeg_study

./: .gitignore  CMakeLists.txt  main.cpp
sdk/: av_deleter.cc
sdk/include/: av_deleter.h  ffmpeg.h
